Fixed handlebar typo

--- a/views/partials/burgers/burger-block.handlebars
+++ b/views/partials/burgers/burger-block.handlebars
@@ -2,6 +2,6 @@
 	{{burger_name}}
 
 	<button class="change-devoured" data-id="{{id}}" data-newdevour="{{devour}}">
-		{{#if sleep}}DEVOURED!{{else}}NOT DEVOURED!{{/if}}
+		{{#if devoured}}DEVOUR!{{else}}NOT DEVOURED!{{/if}}
 	</button>
 </li>
