--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,4 +1,4 @@
-<h1>Burgers!</h1>
+<h1>Eat-Da-Burger</h1>
 
 <h2>Burgers that are not devoured!</h2>
 
@@ -28,11 +28,11 @@
     <input type="text" id="burger" name="name">
   </div>
 
-  <div class="form-group">
+  {{!-- <div class="form-group">
     <label for="devoured">Devoured?</label><br>
     <input type="radio" name="devoured" value="1" checked> Devoured!<br>
     <input type="radio" name="devoured" value="0"> To Eat
-  </div>
+  </div> --}}
 
   <button type="submit">Add Burger</button>
 </form>
