Setting up heroku [WIP] styling for website

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,4 +1,5 @@
 <h1>Eat-Da-Burger</h1>
+{{!-- <img src="../images/burger-dribble.gif" alt="Burger gif that opens and reconstructs the burger"> --}}
 
 <h2>Burgers that are not devoured!</h2>
 
