--- a/views/partials/burgers/burger-block.handlebars
+++ b/views/partials/burgers/burger-block.handlebars
@@ -1,7 +1,7 @@
 <li>
 	{{burger_name}}
 
-	<button class="change-devoured" data-id="{{id}}" data-newdevour="{{devoured}}">
-		{{#if devoured}}DEVOUR!{{else}}NOT DEVOURED!{{/if}}
+	<button class="change-devoured btn btn-secondary btn-sm" data-id="{{id}}" data-newdevour="{{devoured}}">
+		{{#if devoured}}EAT UP!{{else}}NOM!{{/if}}
 	</button>
 </li>
