--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,39 +1,49 @@
 <h1>Eat-Da-Burger</h1>
-{{!-- <img src="../images/burger-dribble.gif" alt="Burger gif that opens and reconstructs the burger"> --}}
+<img class="center" src="../images/burger-dribble4.gif" alt="Burger gif that opens and reconstructs the burger">
 
-<h2>Burgers that are not devoured!</h2>
 
-<ul>
-  {{#each burgers}}
-    {{#unless devoured}}
-      {{> burgers/burger-block devoured=true}}
-    {{/unless}}
-  {{/each}}
-</ul>
-
-<h2>Burgers that are devoured!</h2>
-
-<ul>
-  {{#each burgers}}
-    {{#if devoured}}
-      {{> burgers/burger-block devoured=false}}
-    {{/if}}
-  {{/each}}
-</ul>
-
+<div class="container">
+    <form class="create-form">
 <h2>Add a Burger</h2>
-<form class="create-form">
+        <div class="form-group">
+            <label id="burger-name" for="burger">Burger Name:</label>
+            <input type="text" id="burger" name="name">
+        </div>
 
-  <div class="form-group">
-    <label for="burger">Burger Name:</label>
-    <input type="text" id="burger" name="name">
-  </div>
 
-  {{!-- <div class="form-group">
-    <label for="devoured">Devoured?</label><br>
-    <input type="radio" name="devoured" value="1" checked> Devoured!<br>
-    <input type="radio" name="devoured" value="0"> To Eat
-  </div> --}}
+        <button type="submit">Add Burger</button>
+    </form>
+    <div class="row">
+        <div class="col-sm-6">
+            <div class="jumbotron">
+                <h2>Enjoy me fresh!</h2>
+                <hr class="my-4">
+                <ul>
+                    {{#each burgers}}
+                    {{#unless devoured}}
+                    {{> burgers/burger-block devoured=true}}
+                    {{/unless}}
+                    {{/each}}
+                </ul>
+            </div>
+        </div>
 
-  <button type="submit">Add Burger</button>
-</form>
+
+
+
+        <div class="col-sm-6">
+            <div class="jumbotron">
+                <h2>Another one...?</h2>
+                <hr class="my-4">
+                <ul>
+                    {{#each burgers}}
+                    {{#if devoured}}
+                    {{> burgers/burger-block devoured=false}}
+                    {{/if}}
+                    {{/each}}
+                </ul>
+            </div>
+        </div>
+    </div>
+
+</div>
