--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -3,17 +3,19 @@
 
 
 <div class="container">
-    <form class="create-form">
-<h2>Add a Burger</h2>
-        <div class="form-group">
-            <label id="burger-name" for="burger">Burger Name:</label>
-            <input type="text" id="burger" name="name">
-            <button id="burger-add" type="submit">Add Burger</button>
+    <div class="row create-form">
+        <div class="col-sm-12">
+            <form>
+                <h2>Add a Burger</h2>
+                <div class="form-group">
+                    <label id="burger-name" for="burger">Burger Name:</label>
+                    <input type="text" id="burger" name="name">
+                    <button id="burger-add" type="submit">Add Burger</button>
+                </div>
+            </form>
         </div>
+    </div>
 
-
-        {{!-- <button id="burger-add" type="submit">Add Burger</button> --}}
-    </form>
     <div class="row">
         <div class="col-sm-6">
             <div class="jumbotron">
