--- a/views/partials/burgers/burger-block.handlebars
+++ b/views/partials/burgers/burger-block.handlebars
@@ -1,3 +1,4 @@
+{{!-- Button to eat burger once created. If burger eaten, it cannot be eaten again --}}
 <li>
     {{#if devoured}}
 	{{burger_name}}
